# sysly

./: .jot  .travis.yml  Cargo.toml  README.md  index.html  search-index.js
debug_builders/: index.html  struct.DebugList.html  struct.DebugMap.html  struct.DebugSet.html  struct.DebugStruct.html  struct.DebugTuple.html
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.PartialEq.js
implementors/core/fmt/: trait.Debug.js
implementors/core/marker/: trait.Copy.js
src/: lib.rs  main.rs  maino.rs
src/debug_builders/: lib.rs.html
src/sysly/: lib.rs.html
src/unix_socket/: lib.rs.html
sysly/: enum.Facility.html  enum.Severity.html  index.html  sidebar-items.js  struct.Syslog.html  type.Result.html
unix_socket/: enum.AddressKind.html  index.html  struct.Incoming.html  struct.SocketAddr.html  struct.UnixDatagram.html  struct.UnixListener.html  struct.UnixStream.html
