[package]

name = "sysly"
version = "0.2.1"
authors = ["softprops <d.tangren@gmail.com>"]
description = "A modern multi-transport syslog appender."
documentation = "https://github.com/softprops/sysly#readme"
homepage = "https://github.com/softprops/sysly"
repository = "https://github.com/softprops/sysly"
keywords = ["log", "logging", "syslog", "unix"]
license = "MIT"
exclude = ["src/main.rs"]

[dependencies]
unix_socket = "0.2.2"
time = "0.1.21"

[[bin]]
name = "sysly"
doc = false